Fixed positioning on mobile

--- a/public_html/assets/css/main.css
+++ b/public_html/assets/css/main.css
@@ -238,7 +238,7 @@ p {
 /* PARALLAX */
 .fh5co-hero {
     background-color: #555;
-    background-attachment: fixed;
+    background-attachment: initial;
     background-position: 50% 0;
     background-size: cover;
     position: relative;
